Added reduced img files

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@
     
 
 .header-image {
-        background-image: url('https://get.pxhere.com/photo/sunflowers-day-sky-field-flower-sunflower-yellow-plant-flowering-plant-plantation-crop-spring-farm-landscape-cash-crop-wildflower-sunflower-seed-agriculture-horizon-daisy-family-plain-meadow-cloud-vegetarian-food-asterales-annual-plant-perennial-plant-1609323.jpg');
+        background-image: url('/img/header.jpg');
         background-size: cover; /* Ajusta el tamaño de la imagen para cubrir todo el encabezado */
         background-position: center; /* Centra la imagen en el encabezado */
         background-repeat: no-repeat; /* Evita que la imagen se repita */
